--- a/zz/res/zhaoyun.plist
+++ b/zz/res/zhaoyun.plist
@@ -4,180 +4,7 @@
 <dict>
 	<key>frames</key>
 	<dict>
-		<key>unit_mov01.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>0</integer>
-		</dict>
-		<key>unit_mov02.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>48</integer>
-		</dict>
-		<key>unit_mov03.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>96</integer>
-		</dict>
-		<key>unit_mov04.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>144</integer>
-		</dict>
-		<key>unit_mov05.png</key>
-		<dict>
-			<key>flipy</key>
-			<true/>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>192</integer>
-		</dict>
-		<key>unit_mov06.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>240</integer>
-		</dict>
-		<key>unit_mov07.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>288</integer>
-		</dict>
-		<key>unit_mov08.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>336</integer>
-		</dict>
-		<key>unit_mov09.png</key>
-		<dict>
-			<key>height</key>
-			<integer>48</integer>
-			<key>offsetX</key>
-			<real>0.0</real>
-			<key>offsetY</key>
-			<real>0.0</real>
-			<key>originalHeight</key>
-			<integer>48</integer>
-			<key>originalWidth</key>
-			<integer>48</integer>
-			<key>width</key>
-			<integer>48</integer>
-			<key>x</key>
-			<integer>0</integer>
-			<key>y</key>
-			<integer>384</integer>
-		</dict>
-		<key>unit_mov10.png</key>
+		<key>zhaoyun_injure_01.png</key>
 		<dict>
 			<key>height</key>
 			<integer>48</integer>
@@ -196,7 +23,7 @@
 			<key>y</key>
 			<integer>432</integer>
 		</dict>
-		<key>unit_mov11.png</key>
+		<key>zhaoyun_injure_02.png</key>
 		<dict>
 			<key>height</key>
 			<integer>48</integer>
@@ -214,6 +41,179 @@
 			<integer>0</integer>
 			<key>y</key>
 			<integer>480</integer>
+		</dict>
+		<key>zhaoyun_movedown_01.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>0</integer>
+		</dict>
+		<key>zhaoyun_movedown_02.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>48</integer>
+		</dict>
+		<key>zhaoyun_moveleft_01.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>rotated</key>
+			<false/>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>192</integer>
+		</dict>
+		<key>zhaoyun_moveleft_02.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>240</integer>
+		</dict>
+		<key>zhaoyun_moveup_01.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>96</integer>
+		</dict>
+		<key>zhaoyun_moveup_02.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>144</integer>
+		</dict>
+		<key>zhaoyun_standdown_01.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>288</integer>
+		</dict>
+		<key>zhaoyun_standleft_01.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>384</integer>
+		</dict>
+		<key>zhaoyun_standup_01.png</key>
+		<dict>
+			<key>height</key>
+			<integer>48</integer>
+			<key>offsetX</key>
+			<real>0.0</real>
+			<key>offsetY</key>
+			<real>0.0</real>
+			<key>originalHeight</key>
+			<integer>48</integer>
+			<key>originalWidth</key>
+			<integer>48</integer>
+			<key>width</key>
+			<integer>48</integer>
+			<key>x</key>
+			<integer>0</integer>
+			<key>y</key>
+			<integer>336</integer>
 		</dict>
 	</dict>
 	<key>texture</key>
