--- a/tools/RPGViewer30Build0311/RPGViewer.ini
+++ b/tools/RPGViewer30Build0311/RPGViewer.ini
@@ -1,5 +1,5 @@
 [OutputOption]
-LastOutputPath=E:\cocos2dx\ccz\mark\
+LastOutputPath=E:\project\quick-cc\tools\mapblock\
 OutputType=1 ;导出图片类型，0表示bmp格式，1表示png格式，2表示mng格式（支持动画），3表示jpg格式，4表示三国群英传SHP格式
 IsOutputInfo=0 ;是否输出图片偏移信息
 [ImportOption]
@@ -12,5 +12,7 @@ IsShowTransparency=1 ;是否显示alpha通道，0表示不显示，1表示显示
 [Config]
 CharSet=0
 [GamePath]
-PATH_SOUSOU=D:\Program Files\ccz\
+PATH_SOUSOU=D:\Program Files\CaoCao\
 PATH_SAN9=D:\Program Files\koei\san9\
+PATH_SK2=D:\Games\SUIKO2_CN\
+PATH_SAN10=F:\game\Romance Of Three Kingdom 10 PK Chinese Standalone\
